# status_test_project

./: README.md  TreeStore.py  main.py  pyproject.toml
Solutions/: DictStore.py  IDataStore.py  TreeStore.py
tests/: conftest.py  test_getAllParents_func.py  test_getAll_func.py  test_getChildren_func.py  test_getItem_func.py
